--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,6 @@ keywords = ["webring-plusplus", "web", "discovery", "actix", "server"]
 license = "Apache-2.0/MIT"
 
 [dependencies]
-actix-rt  = "1.1"
-actix-web = "3.0"
-serde     = "1.0"
+actix-rt  = "2.10"
+actix-web = "4.8"
+serde     = { version = "1.0", features = ["derive"] }
